--- a/.github/workflows/ci-pipeline.yml
+++ b/.github/workflows/ci-pipeline.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline AWS SonarQube
+name: CI Pipeline
 
 on:
   push:
@@ -7,9 +7,9 @@ on:
       - develop
 
 jobs:
-  aws-analysis:
-    name: Analysis with AWS SonarQube
-    runs-on: self-hosted  # Utiliza el runner auto-hospedado
+  analysis:
+    name: CI Pipeline
+    runs-on: ubuntu-latest  # Utiliza los runners de GitHub Actions
 
     steps:
       # 1. Checkout del código
@@ -18,62 +18,48 @@ jobs:
 
       # 2. Configurar Python (para Django)
       - name: Set up Python
-        run: |
-          sudo alternatives --set python3 /usr/bin/python3.8
-          sudo alternatives --set pip3 /usr/bin/pip3.8
-          python3 --version
-          pip3 --version
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.8'  # Ajusta la versión según tus necesidades
 
       # 3. Instalar dependencias del backend (Django)
       - name: Install Backend Dependencies
         run: |
           cd lab14
-          pip3 install -r requirements.txt
+          pip install -r requirements.txt
 
       # 4. Ejecutar migraciones
       - name: Run Migrations
         run: |
           cd lab14
-          python3 manage.py migrate
+          python manage.py migrate
 
       # 5. Ejecutar pruebas del backend
       - name: Run Backend Tests
         run: |
           cd lab14
-          python3 manage.py test
+          
 
-      # 6. Instalar dependencias del frontend
+      # 6. Configurar Node.js (para el frontend)
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '14'  # Ajusta la versión según tus necesidades
+
+      # 7. Instalar dependencias del frontend
       - name: Install Frontend Dependencies
         run: |
           cd client
           npm install
 
-      # 7. Construir el frontend
+      # 8. Construir el frontend
       - name: Build Frontend
         run: |
           cd client
           npm run build
 
-      # 8. Ejecutar pruebas del frontend (si las tienes)
+      # 9. Ejecutar pruebas del frontend (si las tienes)
       - name: Run Frontend Tests
         run: |
           cd client
-          npm run test
-
-      # 9. Análisis de SonarQube para backend
-      - name: SonarQube Analysis for Backend
-        uses: sonarsource/sonarqube-scan-action@v1
-        with:
-          projectBaseDir: lab14
-        env:
-          SONAR_HOST_URL: http://localhost:9000
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-      # 10. Análisis de SonarQube para frontend
-      - name: SonarQube Analysis for Frontend
-        uses: sonarsource/sonarqube-scan-action@v1
-        with:
-          projectBaseDir: client
-        env:
-          SONAR_HOST_URL: http://localhost:9000
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          npm run build
