--- a/lab14/requirements.txt
+++ b/lab14/requirements.txt
@@ -6,3 +6,6 @@ djangorestframework>=3.15.2
 
 # JWT para autenticación
 djangorestframework-simplejwt>=5.3.1
+
+# para la coneccion postgresql
+psycopg2>=2.9.10
